--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.2"
+    "@astrojs/react": "^4.1.2",
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
+    "astro": "^5.1.2",
+    "astro-font": "^0.1.81",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
